BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithPermsXLation/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>GPO_BMS_US__c</fullName>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: GPO specification for Global Sales CV (sampling) users on organization accounts</description>
        <label>GPO</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPO_KAM_BMS_US__c</fullName>
        <label>GPO</label>
        <picklist>
            <picklistValues>
                <fullName>Amerinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardinal Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FirstChoice Cooperative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Trust Purchasing Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovative Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MedAssets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HC Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GST_BMS_CA__c</fullName>
        <description>Stores GST for the HCP</description>
        <label>GST</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_vod__c</fullName>
        <description>Gender of the professional (Person Account).</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geographic_Reach_BMS_US__c</fullName>
        <description>VPRO - January 2013 - BMS Global Requirements &amp; Design: Geographic Reach information on Organization Account Header information for MM</description>
        <label>Geographic Reach</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Graduate_University_BMS_CN__c</fullName>
        <description>College/University  the professional&apos;s graduated from</description>
        <label>Graduate University</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Year_BMS_CA__c</fullName>
        <label>Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Specialty_1_vod__c</fullName>
        <description>Picklist of the group&apos;s specialty. Edit the picklist to change the available specialties.  Used by HMS data load.</description>
        <label>Group Specialty 1</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatrics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Specialty_2_vod__c</fullName>
        <description>Picklist of the group&apos;s alternate specialty. Edit the picklist to change the available specialties.  Used by HMS data load.</description>
        <label>Group Specialty 2</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatrics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HBV_Beds_BMS_CN__c</fullName>
        <description>乙肝床位数 for HP</description>
        <label>HBV Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HBV_Rating_BMS_US__c</fullName>
        <label>HBV Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HCPQ1_BMS__c</fullName>
        <description>Payer/ Government/ Advocacy - Market Access customers requiring clinical, scientific, and pharmacoeconomic presentations to support market access to BMS medicines at commercial plans and federal and state funded programs</description>
        <inlineHelpText>Payer/ Government/ Advocacy - Market Access customers requiring clinical, scientific, and pharmacoeconomic presentations to support market access to BMS medicines at commercial plans and federal and state funded programs</inlineHelpText>
        <label>Payer/ Government/ Advocacy</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCPQ2_BMS__c</fullName>
        <description>Clinical Trial Support - PIs and key clinical study personnel as identified in SCOPE documents to support company initiated trials</description>
        <inlineHelpText>Clinical Trial Support - PIs and key clinical study personnel as identified in SCOPE documents to support company initiated trials</inlineHelpText>
        <label>Clinical Trial Support</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCPQ3_BMS__c</fullName>
        <description>Medical Strategy - Appropriate HCPs aligned with specific medical plan initiatives based on their impact beyond an individual office practice or authority over a broad patient population</description>
        <inlineHelpText>Medical Strategy - Appropriate HCPs aligned with specific medical plan initiatives based on their impact beyond an individual office practice or authority over a broad patient population</inlineHelpText>
        <label>Medical Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HEOR_information_BMS_EMEA__c</fullName>
        <label>HEOR Information?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HIV_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Number of HIV lives, Enrollment section on Organizations for MM users</description>
        <label>HIV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HIV_Case_Manager_BMS_US__c</fullName>
        <label>HIV Case Manager</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HIV_Case_Manager_BMS_US_del__c</fullName>
        <label>HIV Case Manager</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HIV_Rating_BMS_US__c</fullName>
        <label>HIV Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HMO_Market_Shr__c</fullName>
        <description>Market Share for # Lives in the HMO offering at this account.  Used by MCO and MCO Plan accounts.</description>
        <label>HMO Market Shr</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HMO_POS__c</fullName>
        <description># Lives covered by a HMO/POS offering.  Used by MCO and MCO Plan accounts.</description>
        <label>HMO/POS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HMO__c</fullName>
        <description># Lives covered by a HMO offering.  Used by MCO and MCO Plan accounts.</description>
        <label>HMO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HP_Usage_Level_BMS_CN__c</fullName>
        <description>HP Usage Level</description>
        <label>HP Usage Level</label>
        <picklist>
            <picklistValues>
                <fullName>Baraclude Loyalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-ETV Loyalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamivudine Trialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Trialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-MD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HST_BMS_CA__c</fullName>
        <description>Stores HST for HCP - BMS Canada</description>
        <label>HST</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hal_HIV_Target_BMS_US__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Account target flag for MM users</description>
        <label>Hal HIV Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hal_Oncology_Target_BMS_US__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Account target flag for MM users</description>
        <label>Hal Oncology Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homemade_Docetaxel_Patients_Share_BMS_CN__c</fullName>
        <formula>IF((Anzatax_Potential_Patients__c + 
Homemade_Docetaxel_Poten_Patient_BMS_CN__c + 
Homemade_Paclitaxel_Poten_Patient_BMS_CN__c + 
Liposome_Potential_Patients_BMS_CN__c + 
Paclitaxel_Potential_Patients_BMS_CN__c + 
Taxol_Potential_Patients_BMS_CN__c + 
Taxotere_Potential_Patients_BMS_CN__c ) = 0, 
0, 
Homemade_Docetaxel_Poten_Patient_BMS_CN__c / (Anzatax_Potential_Patients__c + 
Homemade_Docetaxel_Poten_Patient_BMS_CN__c + 
Homemade_Paclitaxel_Poten_Patient_BMS_CN__c + 
Liposome_Potential_Patients_BMS_CN__c + 
Paclitaxel_Potential_Patients_BMS_CN__c + 
Taxol_Potential_Patients_BMS_CN__c + 
Taxotere_Potential_Patients_BMS_CN__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Homemade Docetaxel Patients Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Homemade_Docetaxel_Poten_Patient_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Homemade Docetaxel Potential Patients</description>
        <label>Homemade Docetaxel Potential Patients</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Homemade_Paclitaxel_Patient_Share_BMS_CN__c</fullName>
        <formula>IF((Anzatax_Potential_Patients__c + 
Homemade_Docetaxel_Poten_Patient_BMS_CN__c + 
Homemade_Paclitaxel_Poten_Patient_BMS_CN__c + 
Liposome_Potential_Patients_BMS_CN__c + 
Paclitaxel_Potential_Patients_BMS_CN__c + 
Taxol_Potential_Patients_BMS_CN__c + 
Taxotere_Potential_Patients_BMS_CN__c ) = 0, 
0, 
Homemade_Paclitaxel_Poten_Patient_BMS_CN__c / (Anzatax_Potential_Patients__c + 
Homemade_Docetaxel_Poten_Patient_BMS_CN__c + 
Homemade_Paclitaxel_Poten_Patient_BMS_CN__c + 
Liposome_Potential_Patients_BMS_CN__c + 
Paclitaxel_Potential_Patients_BMS_CN__c + 
Taxol_Potential_Patients_BMS_CN__c + 
Taxotere_Potential_Patients_BMS_CN__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Homemade Paclitaxel Patients Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Homemade_Paclitaxel_Poten_Patient_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Homemade Paclitaxel Potential Patients</description>
        <label>Homemade Paclitaxel Potential Patients</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hospital_Rank_BMS_CN__c</fullName>
        <label>Hospital Rank</label>
        <picklist>
            <picklistValues>
                <fullName>Level3 - S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level3 - A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level3 - B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level3 - C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level2 - A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level2 - B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level2 - C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level1 - A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level1 - B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level1 - C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospital_Type_vod__c</fullName>
        <description>Identify a hospital is a General Practitioner or a Hospital.</description>
        <label>Hospital Type</label>
        <picklist>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID2_vod__c</fullName>
        <description>The ID2_vod field acts as a secondary identifier to link Accounts to Sales Data via the Analytics application.  This ID should be leveraged in the case that a Physician has both distribution and script data loaded.</description>
        <label>ID2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_vod__c</fullName>
        <description>The ID field acts as the identifier to link Accounts to Sales Data via the Analytics application.</description>
        <label>ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_ID_BMS__c</fullName>
        <label>IMS ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Point_Person_BMS_US__c</fullName>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: IT Point Person specification for Global Sales CV (sampling) users</description>
        <label>IT Point Person</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IXEMPRAiRepSessionCache_BMS__c</fullName>
        <label>IXEMPRAiRepSessionCache</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_specify_which_HospMed_Grp_BMS_US__c</fullName>
        <description>VPRO - May 2013 - BMS Global Requirements &amp; Design: Profiling question for Global Sales CV (sampling) users</description>
        <label>If yes, specify which Hospital/Med Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_specify_which_Hosp_Med_Grp_BMS_US__c</fullName>
        <description>VPRO - May 2013 - BMS Global Requirements &amp; Design: Profiling question for Global Sales CV (sampling) users</description>
        <label>If yes, specify which Hospital/Med Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immunoscience_Segmentation_BMS__c</fullName>
        <label>Immunoscience Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impacted_Customers__c</fullName>
        <description>VPRO - May 2012 - BMS Oncology Requirements &amp; Design: Custom Field used to calculate the number of impacted customers for MSL reporting.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impacted Customers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Individual_Account_Type_BMS_EMEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPRO - November 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to store the Individual Account Type associated to a given customer. This is a lookup to the Individual Account Type object which stores all of the available values.</description>
        <label>Individual Account Type</label>
        <referenceTo>Individual_Account_Type_BMS_EMEA__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Individual_Account_Type_formula_BMS_EMEA__c</fullName>
        <description>VPRO EMEA June 2014: formula field that retrieves the Name from the lookup object. To be used in My Customer Views as lookup values cannot be retrieved from there.</description>
        <formula>Individual_Account_Type_BMS_EMEA__r.Name</formula>
        <label>Individual Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Sub_Type_BMS_EMEA__c</fullName>
        <description>BMS ACN - Feb Mini 2017 (LRM) - Field to store the classification of an Individual.</description>
        <label>Individual Sub Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infusion_Nurse_BMS_US__c</fullName>
        <label>Infusion Nurse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integration_Status_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interaction_Class_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the class of an interaction.</description>
        <label>Interaction Class</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Frequency_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the frequency of interactions for a given account.</description>
        <label>Interaction Frequency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_BMS_CA__c</fullName>
        <description>Account Interest, similar to Specialty</description>
        <label>Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology, adult ACA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acupuncture ACU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addiction Medicine ADD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration ADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adolescent Medicine ADO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Medicine ALT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anatomical Pathology ANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anesthesia ANE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation Medicine AVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bio-Ethics BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavioral Therapy BEH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Biochemistry BIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bacteriology/Microbiology BMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloodbank Technician/Mgr BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology CAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardio-Vascular Thoracic Surgery CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Care Medicine CIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinician Investigator CIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Fellowship CLF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorectal Surgery COL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Medicine COM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiac Surgery CSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiovascular and Thorasic Surgery CTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiothoracic Surgery CVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developmental Pediatrics DEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology DER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostic Imaging DI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Family Medicine EFM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InternationalQ1_BMS_CA__c</fullName>
        <description>Member of International treatment guideline (including government) committee within the last 2 years</description>
        <inlineHelpText>Member of International treatment guideline (including government) committee within the last 2 years</inlineHelpText>
        <label>Member Int Treatment Guideline Committee</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InternationalQ2_BMS_CA__c</fullName>
        <description>Committee/board member of scientific committee for International association within the last 2 years</description>
        <inlineHelpText>Committee/board member of scientific committee for International association within the last 2 years</inlineHelpText>
        <label>Member Intl Scientific Comm 2yrs?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InternationalQ3_BMS_CA__c</fullName>
        <description>Chairman/speaker at an International scientific meeting (including payer related)  </description>
        <inlineHelpText>Chairman/speaker at an International scientific meeting (including payer related)  </inlineHelpText>
        <label>Chairman/Speaker@ Int Scientific Meeting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_BMS_CA__c</fullName>
        <description>Field created to show separat sections for Overall SOI, read only field for all profiles</description>
        <label>International</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Monitoring_Type_vod__c</fullName>
        <description>List of Inventory Monitoring Types available for the Account. This field must contain a value from the Default_Inventory_Monitoring_Type_vod__c field. If None_vod is selected, then no Inventory Monitoring activities will be allowed for the selected account</description>
        <label>Inventory Monitoring Type</label>
        <picklist>
            <picklistValues>
                <fullName>None_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory_Monitoring_vod</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Investigator_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this professional is a clinical trials investigator.  Used by person accounts.</description>
        <label>BMS Investigator?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive_BMS_CN__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_25_or_more_of_you_patient_pop_BMS_US__c</fullName>
        <label>Is 25% or more of you patient pop adult?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Eliquis_Stocked_BMS_US__c</fullName>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Is Eliquis Stocked specification for Global Sales CV (sampling) users on organization accounts</description>
        <label>Is Eliquis Stocked?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_GIPAP_TIPAP_Dr_BMS_CN__c</fullName>
        <description>是否GIPAP/TIPAP医生 for ONCO - SPRYCEL</description>
        <label>Is GIPAP/TIPAP Dr</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_KOL_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is KOL</description>
        <label>Is KOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Onglyza_Focus_Doctor_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Onglyza Focus Doctor ?</description>
        <label>Onglyza Focus Doctor ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ixempra_Parent_Product_Rating__c</fullName>
        <label>Ixempra Parent Product Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ixempra_Profile_BMS__c</fullName>
        <label>Ixempra Profile Incomplete Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Profiling complete - All questions answered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiling complete - &quot;No or don&apos;t know at this time&quot; for the treater question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiling incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable - non-prescribers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ixempra_Speaker_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IXEMPRA Speaker?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ixempra_Target_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture if an account is an IXEMPRA target.</description>
        <label>IXEMPRA Target</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>